  * Add debian/patches/fix-25761-add-traceback-attribute.patch:
    new patch to ensure exceptions registered in __cause__ attributes
    have a __traceback__ attribute. Closes: #802677
  * Extend lintian overrides to cover more false positives of
    source-is-missing.
  * Cleanup debian/copyright for dropped/renamed files.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 25 Nov 2015 12:32:25 +0100

python-django (1.8.7-1) unstable; urgency=high

  * New upstream security release:
    https://www.djangoproject.com/weblog/2015/nov/24/security-releases-issued/
    It fixes:
    - CVE-2015-8213: settings leak possibility in date template filter

 -- Luke Faraone <lfaraone@debian.org>  Wed, 25 Nov 2015 04:24:27 +0000

python-django (1.8.6-1) unstable; urgency=medium

  * New upstream bugfix release.

 -- Raphaël Hertzog <hertzog@debian.org>  Sun, 15 Nov 2015 18:29:11 +0100

python-django (1.8.5-2) unstable; urgency=medium

  * Upload to unstable.

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 02 Nov 2015 15:56:10 +0100

python-django (1.8.5-1) experimental; urgency=medium

  * New upstream bugfix release:
    https://www.djangoproject.com/weblog/2015/oct/03/bugfix-release-issued/

 -- Raphaël Hertzog <hertzog@debian.org>  Tue, 13 Oct 2015 11:37:24 +0200

python-django (1.8.4-1) experimental; urgency=medium

  * New upstream security release:
    https://www.djangoproject.com/weblog/2015/aug/18/security-releases/
    It fixes:
    - CVE-2015-5964: possible denial-of-service in logout() view
  * Update debian/copyright to copyright-format 1.0.

 -- Luke Faraone <lfaraone@debian.org>  Wed, 19 Aug 2015 03:55:47 +0000

python-django (1.8.3-1) experimental; urgency=medium

  * New upstream security release:
    https://www.djangoproject.com/weblog/2015/jul/08/security-releases/
    It fixes:
    - CVE-2015-5143: possible denial-of-service by filling session store
    - CVE-2015-5144: possible header injection since validators accept
      newlines in input