@@ -19,8 +19,10 @@ override_dh_auto_build:
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	cd tests && LC_ALL=C.UTF-8 PYTHONPATH=.. python ./runtests.py --verbosity=2
-	cd tests && LC_ALL=C.UTF-8 PYTHONPATH=.. python3 ./runtests.py --verbosity=2
+	cd tests && for python in $$(pyversions -s) $$(py3versions -s); do \
+	    	echo "——— Running tests with $$python ———"; \
+		LC_ALL=C.UTF-8 PYTHONPATH=.. $$python ./runtests.py --verbosity=2; \
+	done
 endif
 
 override_dh_clean:
