@@ -7,6 +7,7 @@ python-django (1.8.7-2) UNRELEASED; urgency=high
   * Extend lintian overrides to cover more false positives of
     source-is-missing.
   * Cleanup debian/copyright for dropped/renamed files.
+  * Run tests for all supported Python versions.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Wed, 25 Nov 2015 12:32:25 +0100
 
